@startuml
abstract class SpellCasting {
    +prepareSpell()
    -chooseSpell()
    -gatherIngredients(spell)
    -castSpell(spell)
}

class FireSpell {
    +chooseSpell()
    +gatherIngredients(spell)
    +castSpell(spell)
}

class InvisibilitySpell {
    +chooseSpell()
    +gatherIngredients(spell)
    +castSpell(spell)
}

class MageKobold {
    -spellCastingMethod: SpellCasting
    +prepareSpell()
    +changespellCastingMethod(spellCastingMethod: SpellCasting)
}

SpellCasting <|-- FireSpell
SpellCasting <|-- InvisibilitySpell
MageKobold --> SpellCasting
@enduml
